log
Wed 27 Sep 2023 09:43:24 PM UTC: 
 tests:  0|4
total_score: 0/70
aacc12b
Wed 27 Sep 2023 09:51:23 PM UTC: 
 heap.c | 24 ++++++++----------------
 1 file changed, 8 insertions(+), 16 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:10: error: void value not ignored as it ought to be
   23 |   return (void)pq->heapArray { 0 }
      |          ^~~~~~~~~~~~~~~~~~~
heap.c:23:29: error: expected ‘;’ before ‘{’ token
   23 |   return (void)pq->heapArray { 0 }
      |                             ^~
      |                             ;
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4d20f1c
Wed 27 Sep 2023 09:53:19 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:39: error: expected ‘;’ before ‘}’ token
   23 |   return (void *)pq->heapArray[0].data
      |                                       ^
      |                                       ;
   24 | }
      | ~                                      
Compilation failed
d5629ff
Wed 27 Sep 2023 09:53:25 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
2262550
Wed 27 Sep 2023 09:53:44 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
e41ea41
Wed 27 Sep 2023 09:59:07 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:26:57: error: expected ‘(’ before ‘}’ token
   26 | void heap_push(Heap *pq, void *data, int priority) { if }
      |                                                         ^
      |                                                         (
Compilation failed
9b73031
Thu 28 Sep 2023 01:42:41 AM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:28:19: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   28 |     pq->heapArray = (pq->capac * 2) + 1;
      |                   ^
heap.c:31:3: error: conversion to non-scalar type requested
   31 |   }
      |   ^
heap.c:30:71: error: expected ‘;’ before ‘}’ token
   30 |         (heapElem)realloc(pq->heapArray, sizeof(heapElem) * pq->capac)
      |                                                                       ^
      |                                                                       ;
   31 |   }
      |   ~                                                                    
cc1: all warnings being treated as errors
Compilation failed
4357673
